01-17-2019/Lab-1
>>> for i in range(10):
...     print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> for i in range(10):
... print(i)
  File "<stdin>", line 2
    print(i)
        ^
IndentationError: expected an indented block
>>> 
>>> a=range(10)
>>> a
range(0, 10)
>>> 
>>> for i in a:
...     print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> 
>>> for i in a;
  File "<stdin>", line 1
    for i in a;
              ^
SyntaxError: invalid syntax
>>> 
>>> 
>>> for i in a:
...     print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> 
>>> for i in a:print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> 
>>> for i in range(2,10):
...     print(i)
... 
2
3
4
5
6
7
8
9
>>> 
>>> for i in range(1,10,2):
...     print(i)
... 
1
3
5
7
9
>>> 

